--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://OTHMANE345.github.io/portfolion",
+  "homepage":"https://OTHMANE345.github.io/notes",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
